--- a/Sivas/Web.config
+++ b/Sivas/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SivasContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SivasContext-20160328010629; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SivasContext-20160328010629.mdf"
+    <add name="SivasContext" connectionString="Data Source=himalayaworld.mynetgear.com;Initial Catalog=SivasWebSite;Persist Security Info=True;User ID=LocalUser;Password=Welcome@12345"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
