--- a/Sivas/Sivas.csproj
+++ b/Sivas/Sivas.csproj
@@ -161,6 +161,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\customLand.css" />
     <Content Include="Content\customPort.css" />
+    <Content Include="Content\customProduct.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -191,6 +192,31 @@
     <None Include="Properties\PublishProfiles\WebDeploy.pubxml" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Scripts\jquery-2.2.3.intellisense.js" />
+    <Content Include="image\Products\AC.jpg" />
+    <Content Include="image\Products\Cooler.png" />
+    <Content Include="image\Products\Cooler2.png" />
+    <Content Include="image\Products\DiningTable.png" />
+    <Content Include="image\Products\DiningTable2.png" />
+    <Content Include="image\Products\DiningTable3.png" />
+    <Content Include="image\Products\Fan.png" />
+    <Content Include="image\Products\Fan2.png" />
+    <Content Include="image\Products\KitchenSet.png" />
+    <Content Include="image\Products\PoojaTable.png" />
+    <Content Include="image\Products\PoojaTable2.png" />
+    <Content Include="image\Products\PoojaTable3.png" />
+    <Content Include="image\Products\PoojaTable4.png" />
+    <Content Include="image\Products\Refrigerator.jpg" />
+    <Content Include="image\Products\SmallAppliances.png" />
+    <Content Include="image\Products\SmallAppliances2.png" />
+    <Content Include="image\Products\Sofa.png" />
+    <Content Include="image\Products\Sofa2.png" />
+    <Content Include="image\Products\Sofa3.png" />
+    <Content Include="image\Products\TV.png" />
+    <Content Include="image\Products\TV2.png" />
+    <Content Include="image\Products\WoodenCot.png" />
+    <Content Include="image\Products\WoodenCot2.png" />
+    <Content Include="image\Products\WoodenFurniture.png" />
+    <Content Include="image\Products\Woodern.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-2.2.3.js" />
