--- a/Sivas/Web.config
+++ b/Sivas/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+        <remove name="LocalMySqlServer" />
     <add name="SivasContext" connectionString="Data Source=himalayaworld.mynetgear.com;Initial Catalog=SivasWebSite;Persist Security Info=True;User ID=LocalUser;Password=Welcome@12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -17,9 +18,14 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <system.web>
+  <system.web>    
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <roleManager enabled="true" />
+    <membership defaultProvider="AspNetSqlMembershipProvider">
+      <providers>
+      </providers>
+    </membership>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -69,4 +75,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <security>
+      <authorization>
+        <add accessType="Allow" roles="Administrators, Operators" />
+      </authorization>
+    </security>
+  </system.webServer>
 </configuration>
