--- a/Sivas/Sivas.csproj
+++ b/Sivas/Sivas.csproj
@@ -192,7 +192,7 @@
     <None Include="Properties\PublishProfiles\WebDeploy.pubxml" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Scripts\jquery-2.2.3.intellisense.js" />
-    <Content Include="image\Products\AC.jpg" />
+    <Content Include="image\Products\AC.png" />
     <Content Include="image\Products\Cooler.png" />
     <Content Include="image\Products\Cooler2.png" />
     <Content Include="image\Products\DiningTable.png" />
@@ -205,7 +205,7 @@
     <Content Include="image\Products\PoojaTable2.png" />
     <Content Include="image\Products\PoojaTable3.png" />
     <Content Include="image\Products\PoojaTable4.png" />
-    <Content Include="image\Products\Refrigerator.jpg" />
+    <Content Include="image\Products\Refrigerator.png" />
     <Content Include="image\Products\SmallAppliances.png" />
     <Content Include="image\Products\SmallAppliances2.png" />
     <Content Include="image\Products\Sofa.png" />
