--- a/Sivas/Web.config
+++ b/Sivas/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <remove name="LocalMySqlServer" />
-    <add name="SivasContext" connectionString="Data Source=himalayaworld.mynetgear.com;Initial Catalog=SivasWebSite;Persist Security Info=True;User ID=LocalUser;Password=Welcome@12345" providerName="System.Data.SqlClient" />
+    <remove name="LocalMySqlServer" />    
+    <add name="SivasContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=SivasWebSite;" providerName="System.Data.SqlClient" />
+    <!--<add name="SivasContext" connectionString="Data Source=himalayaworld.mynetgear.com;Initial Catalog=SivasWebSite;Persist Security Info=True;User ID=LocalUser;Password=Welcome@12345" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
