--- a/Sivas/Web.config
+++ b/Sivas/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
         <remove name="LocalMySqlServer" />
-    <add name="SivasContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=SivasWebSite;" providerName="System.Data.SqlClient" />
-    <!--<add name="SivasContext" connectionString="Data Source=himalayaworld.mynetgear.com;Initial Catalog=SivasWebSite;Persist Security Info=True;User ID=LocalUser;Password=Welcome@12345" providerName="System.Data.SqlClient" />-->
+    <!--<add name="SivasContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=SivasWebSite;" providerName="System.Data.SqlClient" />-->
+    <add name="SivasContext" connectionString="Data Source=himalayaworld.mynetgear.com;Initial Catalog=SivasWebSite;Persist Security Info=True;User ID=LocalUser;Password=Welcome@12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
