--- a/Sivas/Web.config
+++ b/Sivas/Web.config
@@ -21,6 +21,14 @@
   </appSettings>
   <system.web>    
     <compilation debug="true" targetFramework="4.5" />
+    <authentication mode="Forms">
+      <forms loginUrl="Login.aspx" timeout="30" cookieless="UseCookies">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="admin@123"/>
+          <user name ="user" password="user@123"/>
+        </credentials>
+      </forms>
+    </authentication>
     <httpRuntime targetFramework="4.5" />
     <roleManager enabled="true" />
     <membership defaultProvider="AspNetSqlMembershipProvider">
