--- a/Sivas/Web.config
+++ b/Sivas/Web.config
@@ -22,7 +22,7 @@
   <system.web>    
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="Login.aspx" timeout="30" cookieless="UseCookies">
+      <forms loginUrl="Login.aspx" timeout="30" cookieless="UseCookies" defaultUrl="~">
         <credentials passwordFormat="Clear">
           <user name="admin" password="admin@123"/>
           <user name ="user" password="user@123"/>
