--- a/Sivas/Web.config
+++ b/Sivas/Web.config
@@ -26,6 +26,7 @@
         <credentials passwordFormat="Clear">
           <user name="admin" password="admin@123"/>
           <user name="user" password="user@123"/>
+          <user name="sivas" password="sivasadmin"/>
         </credentials>
       </forms>
     </authentication>
